# OneBillionRowChallenge

./: .gitignore  CMakeLists.txt  constants.h  data.h  datagenerator.cpp  datagenerator.h  helper.h  iparser.h  main.cpp  mmparser.cpp  mmparser.h  naiveparser.cpp  naiveparser.h  parser.h  randomdatagenerator.cpp  randomdatagenerator.h  type.h
Strategies/: flyweight.h  istrategy.h  multithreadspawn.h  multithreadspawnlockfree.h  multithreadspawnlockfreedoublemap.h  parentthread.h  singlethreadspawn.h
